Two products per row on mobile. Fixed navigation styling on mobile

--- a/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_navigation.scss
@@ -199,6 +199,11 @@
 				padding: 0 $small-spacing;
 				font-size: rem-calc(14);
 
+				@include breakpoint(medium down) {
+					flex: 0 0 100%;
+					max-width: 100%;
+				}
+
 				.sub-sub-menu {
 					margin-top: $large-spacing;
 				}
