--- a/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
+++ b/wp-content/themes/decimaltenths/src/scss/components/_woo-grid.scss
@@ -65,8 +65,8 @@ ul.products,
 	&.columns-4 {
 
 		> .product {
-			flex: 0 0 100%;
-			max-width: 100%;
+			flex: 0 0 50%;
+			max-width: 50%;
 			text-align: center;
 
 			@include breakpoint(medium) {
